Update .gitignore to exclude manual labels and compiled Python files

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ local/
 cell_segmentation/experiments/
 cell_segmentation/experiments_results/
 cell_segmentation/manual_labels/
+cell_segmentation/__pycache__/
+*.py[cod]
