--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-data/
-local/
-cell_segmentation/experiments/
-cell_segmentation/experiments_results/
-cell_segmentation/manual_labels/
-cell_segmentation/Xcelligence_data-2/
-cell_segmentation/unlabelled/
-cell_segmentation/__pycache__/
+experiments/
+experiments_results/
+manual_labels/
+Xcelligence_data-2/
+unlabelled/
+__pycache__/
 *.py[cod]
 temp_augmentation
 # macOS system file
